Add vehicle_global_position to micrortps_agent's published topics
Signed-off-by: Jukka Laitinen <jukkax@ssrc.tii.ae>

--- a/templates/uorb_rtps_message_ids.yaml
+++ b/templates/uorb_rtps_message_ids.yaml
@@ -195,6 +195,7 @@ rtps:
     msg: VehicleControlMode
   - id: 93
     msg: VehicleGlobalPosition
+    send: true
   - id: 94
     msg: VehicleGpsPosition
   - id: 95
