Add vehicle_land_detection and vehicle_local_position to micrortps_agent's published topics
Signed-off-by: Jari Nippula <jarix@ssrc.tii.ae>

--- a/templates/uorb_rtps_message_ids.yaml
+++ b/templates/uorb_rtps_message_ids.yaml
@@ -201,8 +201,10 @@ rtps:
     msg: VehicleGpsPosition
   - id: 95
     msg: VehicleLandDetected
+    send: true
   - id: 96
     msg: VehicleLocalPosition
+    send: true
   - id: 97
     msg: VehicleLocalPositionSetpoint
   - id: 98
