Add BatteryStatus and VehicleStatus to micrortps_agent's published topics
Signed-off-by: Jukka Laitinen <jukkax@ssrc.tii.ae>

--- a/templates/uorb_rtps_message_ids.yaml
+++ b/templates/uorb_rtps_message_ids.yaml
@@ -11,6 +11,7 @@ rtps:
     msg: Airspeed
   - id: 6
     msg: BatteryStatus
+    send: true
   - id: 7
     msg: CameraCapture
   - id: 8
@@ -225,6 +226,7 @@ rtps:
     msg: VehicleRoi
   - id: 102
     msg: VehicleStatus
+    send: true
   - id: 103
     msg: VehicleStatusFlags
   - id: 104
