--- a/templates/uorb_rtps_message_ids.yaml
+++ b/templates/uorb_rtps_message_ids.yaml
@@ -11,6 +11,7 @@ rtps:
     msg: Airspeed
   - id: 6
     msg: BatteryStatus
+    send: true
   - id: 7
     msg: CameraCapture
   - id: 8
@@ -220,6 +221,7 @@ rtps:
     msg: VehicleRoi
   - id: 102
     msg: VehicleStatus
+    send: true
   - id: 103
     msg: VehicleStatusFlags
   - id: 104
