Enable GPS input from px4

--- a/templates/uorb_rtps_message_ids.yaml
+++ b/templates/uorb_rtps_message_ids.yaml
@@ -206,6 +206,7 @@ rtps:
     send: true
   - id: 94
     msg: VehicleGpsPosition
+    send: true
   - id: 95
     msg: VehicleLandDetected
     send: true
